Add agent workflow state samples for Python, Node.js, and Java